# ard_autopilot

./: README.md  autopilot.sh  gazebo.sh
src/ard_autopilot/ar_tools/ar_pose/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ard_autopilot/ar_tools/ar_pose/catkin_generated/: ar_pose-msg-extras.cmake.develspace.in  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/ard_autopilot/ar_tools/ar_pose/cmake/: ar_pose-genmsg-context.py  ar_pose-genmsg.cmake
src/ard_autopilot/ar_tools/ar_pose/launch/: ar_pose_marker_detection_view.rviz  gazebo_ar_pose_transformation.launch  real_drone_ar_pose_marker_detection_view.rviz  real_drone_ar_pose_transformation.launch
src/ard_autopilot/ar_tools/ar_tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ard_autopilot/ar_tools/artoolkit/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ard_autopilot/ar_tools/artoolkit/catkin_generated/: pkg.develspace.context.pc.py  (+1 more)
src/ard_autopilot/ard_autopilot/: CMakeLists.txt  package.xml
src/ard_autopilot/ard_autopilot/launch/: landing_autopilot.launch
src/ard_autopilot/ard_autopilot/src/: landing_autopilot.cpp
src/ard_autopilot/launch/: landing_yard_gazebo.launch  real_world_drone.launch
src/ard_autopilot/teleop_ardrone/: package.xml
src/ard_autopilot/tum_simulator/marker/: model.config
src/ard_autopilot/uga_tum_ardrone/cfg/: AutopilotParams.cfg.save
src/ard_autopilot/uga_tum_ardrone/flightPlans/: delivery_location.txt
src/ard_autopilot/uga_tum_ardrone/launch/: ardrone_driver.launch  gazebo_control.launch  real_drone_control.launch
(+11 files in other folders)
