<?xml version="1.0"?>
<package>
  <name>ard_autopilot</name>
  <version>1.0.0</version>
  <description>Drone controller for delivery landing</description>

  <maintainer email="darius.miskinis.mail@gmail.com">Darius Miskinis</maintainer>

  <license>BSD</license>

  <author>Darius Miskinis</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>ar_pose</build_depend>
  <build_depend>geometry_msg</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>Toon</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>ar_pose</run_depend>
  <run_depend>geometry_msg</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>Toon</run_depend>
  <run_depend>uga_tum_ardrone</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>


</package>
